Fix Video Cards Alignment issues

--- a/src/App.css
+++ b/src/App.css
@@ -81,6 +81,14 @@ input {
   flex: 0.92;
 }
 
+.video-container {
+  display: flex;
+  justify-items: center;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 1.5rem;
+}
+
 .footer {
   display: flex;
   justify-content: center;
